--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "38d409a3-c2b0-4224-ba82-322c4263ea26",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,6 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "\n",
     "np.random.seed(1)"
    ]
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "c4b2e971-ac61-4a5d-ace9-5ccbd9cf7559",
    "metadata": {},
    "outputs": [
@@ -170,7 +169,7 @@
        "4      3364151      3040058         324093                  0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "02f5ab11-0b3e-4d87-b1b5-12d43c90ac03",
    "metadata": {},
    "outputs": [
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "bf297bc7-c4b9-42e7-84ea-de05313e9a3c",
    "metadata": {},
    "outputs": [
@@ -272,7 +271,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "cbf16541-fc63-4f91-a49c-e15c19b429a4",
    "metadata": {},
    "outputs": [
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "0b91275e-02d1-493d-b1f6-2035c7cfd32d",
    "metadata": {},
    "outputs": [
@@ -335,7 +334,7 @@
        "0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "e1d9c815-638a-4c77-ab61-b0b021cafa5f",
    "metadata": {},
    "outputs": [
@@ -459,7 +458,7 @@
        "max      2023.00  19702600.00  18872000.00     3002100.00               1.00"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "e555d51a-8c16-41ad-95f2-8661e6b7893b",
    "metadata": {},
    "outputs": [
@@ -488,7 +487,7 @@
        "1050"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "e0c7b5c9-3770-46c1-917f-9e7ca8e13225",
    "metadata": {},
    "outputs": [
@@ -635,7 +634,7 @@
        "183948       134974           4604                  0  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "e550501c-1177-4998-91b9-745456ddefff",
    "metadata": {},
    "outputs": [
@@ -656,7 +655,7 @@
        "6"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "eccb2f44-520c-4c14-9caa-12ff45059e56",
    "metadata": {},
    "outputs": [
@@ -677,7 +676,7 @@
        "399"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "5c0b3b81-3fd6-487f-a9d8-d9bf383ee405",
    "metadata": {},
    "outputs": [
@@ -698,7 +697,7 @@
        "2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "a097bb04-2cf7-4758-8bc3-ad6fdff9e639",
    "metadata": {},
    "outputs": [],
@@ -735,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "5fba9017-2bde-4a80-b421-679ae3e5af35",
    "metadata": {},
    "outputs": [
@@ -865,7 +864,7 @@
        "4      3040058         324093                  0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "c28c8ced-8180-47e2-a5f7-ef2d9e0d9764",
    "metadata": {},
    "outputs": [
@@ -918,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "a6bc7151-4c89-43e9-96fa-c5f2fcf1b312",
    "metadata": {},
    "outputs": [],
@@ -928,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "1167494f-b44e-41b4-aed2-f20e0989f70b",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1181,7 @@
        "[194346 rows x 11 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "633a0117-9ee7-4433-9a3b-3c1945bf67bb",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "f64708c6-4167-4089-a4b6-4e21c2015de4",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1431,7 @@
        "[194346 rows x 10 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "234dcae9-92ac-4438-9df5-d40878a14f9a",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1845,7 @@
        "[194346 rows x 1473 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "60dfd7b6-16ae-40e3-8ffc-3811a4c0299f",
    "metadata": {},
    "outputs": [
@@ -1868,7 +1867,7 @@
        "((136042, 1472), (58304, 1472), (136042,), (58304,))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "86feef81-35ba-4a92-b612-a3906b513dcc",
    "metadata": {},
    "outputs": [],
@@ -1912,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "id": "d4913a97-a9c0-433d-8994-d271fd782958",
    "metadata": {},
    "outputs": [
@@ -1924,7 +1923,7 @@
        "Name: Unemployment Rate, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1943,13 +1942,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "16b80fc3-4d06-4481-9438-6944455e96fa",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "\n",
     "Undersample = RandomUnderSampler(sampling_strategy ='majority')\n",
     "X_train,y_train = Undersample.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a2235b1a-2e7f-4f91-9673-43680ac99430",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    274\n",
+       "1    274\n",
+       "Name: Unemployment Rate, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.value_counts()"
    ]
   },
   {
@@ -1962,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "afeb7bc9-c3b2-4c41-83c4-dd8fa8f961a5",
    "metadata": {},
    "outputs": [
@@ -2323,7 +2348,7 @@
        "[548 rows x 1472 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2335,46 +2360,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "f739e5a3-16e5-4cd6-a8be-7810311b3dcb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week7_assignment/X_train.csv', index=False)"
+    "X_train.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week9_Assignment/X_train.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "3dc0a9cc-8679-4196-9a35-da6881a6ba0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "y_train = pd.DataFrame(y_train)\n",
-    "y_train.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week7_assignment/y_train.csv', index=False)"
+    "y_train.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week9_Assignment/y_train.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "a111dbb6-dc3d-46ea-b98f-20421062f308",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_test = pd.DataFrame(X_test)\n",
-    "X_test.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week7_assignment/X_test.csv', index=False)"
+    "X_test.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week9_Assignment/X_test.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "c81e9ac7-0fcd-48cb-859f-e2d6fc290edd",
    "metadata": {},
    "outputs": [],
    "source": [
     "y_test = pd.DataFrame(y_test)\n",
-    "y_test.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week7_assignment/y_test.csv', index=False)"
+    "y_test.to_csv('C:/Users/Srinidhi/Documents/USF/Data_Science_Programming/week9_Assignment/y_test.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad8ecf6a-e3f7-4c38-a7aa-01104a848cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
